--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "firebase": "^9.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
@@ -21,6 +22,7 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.42.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
