--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.25",
     "@types/react": "^17.0.23",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "firebase": "^9.1.1",
